--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     implementation 'com.github.PhilJay:MPAndroidChart:v2.2.4'
-
+    implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.anjlab.android.iab.v3:library:1.0.44'
 
     implementation 'com.google.firebase:firebase-messaging:17.3.3'
@@ -38,6 +38,7 @@ dependencies {
         transitive = true
     }
     implementation 'com.android.support:support-vector-drawable:27.1.1'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 }
 
 apply plugin: 'com.google.gms.google-services'
